[gd_scene load_steps=7 format=3 uid="uid://buryu35y06dxa"]

[ext_resource type="Script" uid="uid://dme3hfothig5p" path="res://gui/skill_menu/skill_display.gd" id="1_s0wcq"]
[ext_resource type="Theme" uid="uid://cxq4wi2s4byf1" path="res://textures/gui/themes/custom_theme_alt.tres" id="5_4tbkg"]

[sub_resource type="LabelSettings" id="LabelSettings_s0wcq"]

[sub_resource type="LabelSettings" id="LabelSettings_b4yjh"]

[sub_resource type="LabelSettings" id="LabelSettings_d7xc7"]

[sub_resource type="LabelSettings" id="LabelSettings_gjrol"]

[node name="SkillDisplay" type="Button"]
custom_minimum_size = Vector2(174, 110)
offset_right = 174.0
offset_bottom = 110.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_4tbkg")
script = ExtResource("1_s0wcq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(162, 0)
layout_mode = 2
offset_left = 6.0
offset_top = 6.0
offset_right = 168.0
offset_bottom = 104.0
theme_override_constants/separation = 1

[node name="NameLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "Name Here"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Passive Effects:"
label_settings = SubResource("LabelSettings_s0wcq")

[node name="EffectsContainer" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 6

[node name="Label" type="Label" parent="VBoxContainer/EffectsContainer"]
layout_mode = 2
text = "None"
label_settings = SubResource("LabelSettings_b4yjh")

[node name="AbilitiesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "New Abilities:"
label_settings = SubResource("LabelSettings_d7xc7")

[node name="AbilitiesContainer" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 6

[node name="Label" type="Label" parent="VBoxContainer/AbilitiesContainer"]
layout_mode = 2
text = "None"
label_settings = SubResource("LabelSettings_gjrol")
